k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hotel-app
  labels:
    name: hotel-app
