k8s/06-postgres-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-headless-service
  namespace: hotel-app
  labels:
    app: postgres
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgres
