k8s/08-postgres-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-master-service
  namespace: hotel-app
  labels:
    app: postgres
    role: master
spec:
  selector:
    app: postgres
    statefulset.kubernetes.io/pod-name: postgres-statefulset-0
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  type: ClusterIP
