k8s/08-postgres-read-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-read-service
  namespace: hotel-app
  labels:
    app: postgres
    role: replica
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  type: ClusterIP
